apps/music-assistant/music-assistant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: music-assistant
  labels:
    app: music-assistant
    app.kubernetes.io/name: music-assistant
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8095
    targetPort: 8095
    protocol: TCP
  selector:
    app: music-assistant
